--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     
     <!-- Enlace al favicon ubicado en la carpeta images -->
-    <link rel="icon" href="images/cochefv.ico" type="image/x-icon">
+    <link rel="icon" href="images/llave.ico" type="image/x-icon">
     
     <link rel="stylesheet" href="styles.css">
 </head>
