--- a/coches.html
+++ b/coches.html
@@ -6,7 +6,7 @@
     <title>Tienda de Coches y Piezas Tuning - Coches</title>
     
     <!-- Enlace al favicon ubicado en la carpeta images -->
-    <link rel="icon" href="images/cochefv.ico" type="image/x-icon">
+    <link rel="icon" href="images/llave.ico" type="image/x-icon">
     
     <link rel="stylesheet" href="styles.css"> <!-- Enlazamos el archivo CSS -->
 </head>
