--- a/coches.html
+++ b/coches.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,32 +40,32 @@
             <td>Ford Mustang</td>
             <td>30,000 €</td>
             <td>
-                <img src="images/ford_mustang1.jpg" alt="Ford Mustang 1" width="150" height="150">
-                <img src="images/ford_mustang2.jpg" alt="Ford Mustang 2" width="150" height="150">
+                <img src="images/ford_mustang1.jpg" alt="Ford Mustang 1" width="150" height="150"/>
+                <img src="images/ford_mustang2.jpg" alt="Ford Mustang 2" width="150" height="150"/>
             </td>
         </tr>
         <tr>
             <td>BMW M3</td>
             <td>45,000 €</td>
             <td>
-                <img src="images/bmw_m3_1.jpg" alt="BMW M3 1" width="150" height="150">
-                <img src="images/bmw_m3_2.jpg" alt="BMW M3 2" width="150" height="150">
+                <img src="images/bmw_m3_1.jpg" alt="BMW M3 1" width="150" height="150"/>
+                <img src="images/bmw_m3_2.jpg" alt="BMW M3 2" width="150" height="150"/>
             </td>
         </tr>
         <tr>
             <td>Audi R8</td>
             <td>100,000 €</td>
             <td>
-                <img src="images/audi_r8_1.jpg" alt="Audi R8 1" width="150" height="150">
-                <img src="images/audi_r8_2.jpg" alt="Audi R8 2" width="150" height="150">
+                <img src="images/audi_r8_1.jpg" alt="Audi R8 1" width="150" height="150"/>
+                <img src="images/audi_r8_2.jpg" alt="Audi R8 2" width="150" height="150"/>
             </td>
         </tr>
         <tr>
             <td>Volkswagen Golf GTI</td>
             <td>25,000 €</td>
             <td>
-                <img src="images/vw_golf_gti_1.jpg" alt="VW Golf GTI 1" width="150" height="150">
-                <img src="images/vw_golf_gti_2.jpg" alt="VW Golf GTI 2" width="150" height="150">
+                <img src="images/vw_golf_gti_1.jpg" alt="VW Golf GTI 1" width="150" height="150"/>
+                <img src="images/vw_golf_gti_2.jpg" alt="VW Golf GTI 2" width="150" height="150"/>
             </td>
         </tr>
     </table>
