--- a/piezas.html
+++ b/piezas.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,28 +31,28 @@
     <div class="piezas-grid">
         <!-- Pieza 1 -->
         <div class="pieza-item">
-            <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" width="200">
+            <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" width="200" />
             <h3>Kit de Escape Deportivo</h3>
             <p>Mejora el rendimiento de tu coche con este escape de alta calidad. Compatible con varios modelos.</p>
         </div>
         
         <!-- Pieza 2 -->
         <div class="pieza-item">
-            <img src="images/spoiler.jpg" alt="Spoiler Trasero" width="200">
+            <img src="images/spoiler.jpg" alt="Spoiler Trasero" width="200" />
             <h3>Spoiler Trasero</h3>
             <p>Añade estilo y aerodinámica con este spoiler ajustable para mejorar la estabilidad a alta velocidad.</p>
         </div>
 
         <!-- Pieza 3 -->
         <div class="pieza-item">
-            <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" width="200">
+            <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" width="200" />
             <h3>Llantas Deportivas</h3>
             <p>Un set de llantas de aleación ligera que combina estilo y funcionalidad. Tamaños disponibles para varios modelos.</p>
         </div>
 
         <!-- Pieza 4 -->
         <div class="pieza-item">
-            <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" width="200">
+            <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" width="200" />
             <h3>Suspensión Deportiva</h3>
             <p>Suspensión ajustable para un mejor control y manejo en carretera. Ideal para coches deportivos.</p>
         </div>
