--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     
     <!-- Enlace al favicon ubicado en la carpeta images -->
-    <link rel="icon" href="images/llave.ico" type="image/x-icon">
+    <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 
 <!-- Imagen de portada debajo del texto -->
 <div class="portada">
-    <img src="images/taller.jpg" alt="Imagen de portada de un taller" class="portada-img">
+    <img src="images/taller.jpg" alt="Imagen de portada de un taller" class="portada-img" />
 </div>
 
 </body>
