--- a/piezas.html
+++ b/piezas.html
@@ -10,19 +10,20 @@
 </head>
 <body>
 
-<header>
+<!-- Reemplazo de <header> por un <div> con clase "header" -->
+<div class="header">
     <h1>Tienda de Coches y Piezas Tuning</h1>
-</header>
+</div>
 
-<!-- Menú de navegación -->
-<nav>
+<!-- Reemplazo de <nav> por un <div> con clase "nav" -->
+<div class="nav">
     <div class="container">
         <a href="index.html">Inicio</a>
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
     </div>
-</nav>
+</div>
 
 <!-- Contenido principal -->
 <div class="container">
