--- a/coches.html
+++ b/coches.html
@@ -2,32 +2,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Coches y Piezas Tuning - Coches</title>
-    
-    <!-- Enlace al favicon ubicado en la carpeta images -->
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
-    
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<header>
+<!-- Reemplazo de <header> por un <div> con clase "header" -->
+<div class="header">
     <h1>Tienda de Coches y Piezas Tuning</h1>
-</header>
+</div>
 
-<!-- Envolver el menú de navegación en un div con la clase container -->
-<nav>
+<!-- Reemplazo de <nav> por un <div> con clase "nav" -->
+<div class="nav">
     <div class="container">
         <a href="index.html">Inicio</a>
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
     </div>
-</nav>
+</div>
 
-<!-- Contenedor del contenido principal de la página -->
 <div class="container">
     <h2>Nuestra selección de coches</h2>
     <table>
