--- a/contacto.html
+++ b/contacto.html
@@ -46,6 +46,9 @@
         <input type="submit" value="Enviar" />
     </form>
 </div>
-
+<p>
+    <a href="https://validator.w3.org/markup/check?uri=referer"><img
+      src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+</p>
 </body>
 </html>
