--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styles.css" /> <!-- Verifica que la ruta sea correcta -->
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -34,6 +34,11 @@
 <div class="portada">
     <img src="images/taller.jpg" alt="Imagen de portada de un taller" class="portada-img" />
 </div>
+
+<p>
+    <a href="https://validator.w3.org/markup/check?uri=referer"><img
+      src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+</p>
 
 </body>
 </html>
