--- a/piezas.html
+++ b/piezas.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 
+<!-- Reemplazo de <header> por un <div> con clase "header" -->
 <div class="header">
     <h1>Tienda de Coches y Piezas Tuning</h1>
 </div>
 
+<!-- Reemplazo de <nav> por un <div> con clase "nav" -->
 <div class="nav">
     <div class="container">
         <a href="index.html">Inicio</a>
@@ -23,35 +25,44 @@
     </div>
 </div>
 
+<!-- Contenido principal -->
 <div class="container">
     <h2>Piezas de Tuning Disponibles</h2>
     
     <div class="piezas-grid">
+        <!-- Pieza 1 -->
         <div class="pieza-item">
-            <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" />
+            <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" width="200" />
             <h3>Kit de Escape Deportivo</h3>
             <p>Mejora el rendimiento de tu coche con este escape de alta calidad. Compatible con varios modelos.</p>
         </div>
         
+        <!-- Pieza 2 -->
         <div class="pieza-item">
-            <img src="images/spoiler.jpg" alt="Spoiler Trasero" />
+            <img src="images/spoiler.jpg" alt="Spoiler Trasero" width="200" />
             <h3>Spoiler Trasero</h3>
             <p>Añade estilo y aerodinámica con este spoiler ajustable para mejorar la estabilidad a alta velocidad.</p>
         </div>
 
+        <!-- Pieza 3 -->
         <div class="pieza-item">
-            <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" />
+            <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" width="200" />
             <h3>Llantas Deportivas</h3>
             <p>Un set de llantas de aleación ligera que combina estilo y funcionalidad. Tamaños disponibles para varios modelos.</p>
         </div>
 
+        <!-- Pieza 4 -->
         <div class="pieza-item">
-            <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" />
+            <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" width="200" />
             <h3>Suspensión Deportiva</h3>
             <p>Suspensión ajustable para un mejor control y manejo en carretera. Ideal para coches deportivos.</p>
         </div>
     </div>
 </div>
 
+<p>
+    <a href="https://validator.w3.org/markup/check?uri=referer"><img
+      src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+</p>
 </body>
 </html>
