--- a/coches.html
+++ b/coches.html
@@ -67,9 +67,10 @@
         </tr>
     </table>
 </div>
-<p>
-    <a href="https://validator.w3.org/markup/check?uri=referer"><img
-      src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+<p class="validation">
+    <a href="https://validator.w3.org/markup/check?uri=referer">
+        <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+    </a>
 </p>
 </body>
 </html>
