--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
 <!-- Mapa de imagen para la ubicación del servidor -->
 <div id="contenido">
-    <h2>Ubicación del Servidor - Ciudad Real</h2>
-    <p>Nuestro servidor está ubicado en Ciudad Real, Castilla-La Mancha. Puedes ver su ubicación en el siguiente mapa:</p>
-
+    <h2 class="alinear-centro">Ubicación del Servidor - Ciudad Real</h2> <!-- Clase añadida para centrar -->
+    <p class="alinear-centro">Nuestro servidor está ubicado en Ciudad Real, Castilla-La Mancha.</p> <!-- Clase añadida para centrar -->
+    <p class="alinear-centro">Puedes ver su ubicación en el siguiente mapa:</p> <!-- Clase añadida para centrar -->
+    
     <!-- Imagen con mapa de España -->
     <img src="images/servidor.jpeg" usemap="#zonas" alt="Mapa de España" />
 
