--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Definición del mapa de imagen -->
     <map name="zonas">
         <!-- Coordenadas ajustadas para Ciudad Real -->
-        <area shape="rect" coords="310,360,390,390" href="" title="Ir a Ciudad Real" alt="Ciudad Real" />
+        <area shape="rect" coords="310,360,390,390" href="https://www.google.es/maps/place/Ciudad+Real/@38.9577517,-4.5018391,9z/data=!3m1!4b1!4m6!3m5!1s0xd6bddc90e04fceb:0x30340f3be4bca00!8m2!3d38.9169569!4d-4.0695454!16zL20vMDEyNDky?entry=ttu&amp;g_ep=EgoyMDI0MTAxMy4wIKXMDSoASAFQAw%3D%3D" title="Ir a Ciudad Real" alt="Ciudad Real" />
         <area shape="default" nohref="nohref" />
     </map>
 </div>
