--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
 <!-- Mapa de imagen para la ubicación del servidor -->
 <div id="contenido">
-    <h2 class="alinear-centro">Ubicación del Servidor - Ciudad Real</h2> <!-- Clase añadida para centrar -->
-    <p class="alinear-centro">Nuestro servidor está ubicado en Ciudad Real, Castilla-La Mancha.</p> <!-- Clase añadida para centrar -->
-    <p class="alinear-centro">Puedes ver su ubicación en el siguiente mapa:</p> <!-- Clase añadida para centrar -->
-    
+    <h2 class="alinear-centro">Ubicación del Servidor - Ciudad Real</h2>
+    <p class="alinear-centro">Nuestro servidor está ubicado en Ciudad Real, Castilla-La Mancha.</p>
+    <p class="alinear-centro">Puedes ver su ubicación en el siguiente mapa:</p>
+
     <!-- Imagen con mapa de España -->
     <img src="images/servidor.jpeg" usemap="#zonas" alt="Mapa de España" />
 
-    <!-- Definición del mapa de imagen -->
-    <map name="zonas">
+    <!-- Definición del mapa de imagen con id agregado -->
+    <map name="zonas" id="zonas">
         <!-- Coordenadas ajustadas para Ciudad Real -->
         <area shape="rect" coords="310,360,390,390" href="https://www.google.es/maps/place/Ciudad+Real/@38.9577517,-4.5018391,9z/data=!3m1!4b1!4m6!3m5!1s0xd6bddc90e04fceb:0x30340f3be4bca00!8m2!3d38.9169569!4d-4.0695454!16zL20vMDEyNDky?entry=ttu&amp;g_ep=EgoyMDI0MTAxMy4wIKXMDSoASAFQAw%3D%3D" title="Ir a Ciudad Real" alt="Ciudad Real" />
-        <area shape="default" nohref="nohref" />
+        <area shape="default" nohref="nohref" alt="Zona no clickeable" /> <!-- Agregado el atributo alt -->
     </map>
 </div>
 
