--- a/piezas.html
+++ b/piezas.html
@@ -29,35 +29,73 @@
 <div class="container">
     <h2>Piezas de Tuning Disponibles</h2>
     
-    <div class="piezas-grid">
-        <!-- Pieza 1 -->
-        <div class="pieza-item">
-            <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" width="200" />
-            <h3>Kit de Escape Deportivo</h3>
-            <p>Mejora el rendimiento de tu coche con este escape de alta calidad. Compatible con varios modelos.</p>
-        </div>
-        
-        <!-- Pieza 2 -->
-        <div class="pieza-item">
-            <img src="images/spoiler.jpg" alt="Spoiler Trasero" width="200" />
-            <h3>Spoiler Trasero</h3>
-            <p>Añade estilo y aerodinámica con este spoiler ajustable para mejorar la estabilidad a alta velocidad.</p>
-        </div>
-
-        <!-- Pieza 3 -->
-        <div class="pieza-item">
-            <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" width="200" />
-            <h3>Llantas Deportivas</h3>
-            <p>Un set de llantas de aleación ligera que combina estilo y funcionalidad. Tamaños disponibles para varios modelos.</p>
-        </div>
-
-        <!-- Pieza 4 -->
-        <div class="pieza-item">
-            <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" width="200" />
-            <h3>Suspensión Deportiva</h3>
-            <p>Suspensión ajustable para un mejor control y manejo en carretera. Ideal para coches deportivos.</p>
-        </div>
-    </div>
+    <table style="width: 100%; border-collapse: collapse; border: double 3px #000;">
+        <thead>
+            <tr>
+                <th colspan="2" style="background-color: #333; color: white; border: 2px solid #000;">Piezas</th>
+                <th style="background-color: #333; color: white; border: 2px solid #000;">Descripción</th>
+                <th style="background-color: #333; color: white; border: 2px solid #000;">Precio</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="3" style="border: 2px solid #000;">
+                    <img src="images/kit_escape.jpg" alt="Kit de Escape Deportivo" width="200" />
+                </td>
+                <td style="border: 2px solid #000;">Kit de Escape Deportivo</td>
+                <td style="border: 2px solid #000;">$300</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Mejora el rendimiento de tu coche con este escape de alta calidad.</td>
+                <td style="border: 2px solid #000;" rowspan="2">Incluye instalación gratuita.</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Compatible con varios modelos.</td>
+            </tr>
+            <tr>
+                <td rowspan="3" style="border: 2px solid #000;">
+                    <img src="images/spoiler.jpg" alt="Spoiler Trasero" width="200" />
+                </td>
+                <td style="border: 2px solid #000;">Spoiler Trasero</td>
+                <td style="border: 2px solid #000;">$150</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Añade estilo y aerodinámica con este spoiler ajustable.</td>
+                <td style="border: 2px solid #000;" rowspan="2">Diseñado para máxima eficiencia.</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Mejora la estabilidad a alta velocidad.</td>
+            </tr>
+            <tr>
+                <td rowspan="3" style="border: 2px solid #000;">
+                    <img src="images/llantas_deportivas.jpg" alt="Llantas Deportivas" width="200" />
+                </td>
+                <td style="border: 2px solid #000;">Llantas Deportivas</td>
+                <td style="border: 2px solid #000;">$500</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Un set de llantas de aleación ligera.</td>
+                <td style="border: 2px solid #000;" rowspan="2">Mejoras en la tracción y estabilidad.</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Tamaños disponibles para varios modelos.</td>
+            </tr>
+            <tr>
+                <td rowspan="3" style="border: 2px solid #000;">
+                    <img src="images/suspension_deportiva.jpg" alt="Suspensión Deportiva" width="200" />
+                </td>
+                <td style="border: 2px solid #000;">Suspensión Deportiva</td>
+                <td style="border: 2px solid #000;">$400</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Suspensión ajustable para mejor control.</td>
+                <td style="border: 2px solid #000;" rowspan="2">Ajustable según tus preferencias.</td>
+            </tr>
+            <tr>
+                <td style="border: 2px solid #000;">Ideal para coches deportivos.</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 <p class="validation">
