--- a/piezas.html
+++ b/piezas.html
@@ -32,7 +32,8 @@
     <table style="width: 100%; border-collapse: collapse; border: double 3px #000;">
         <thead>
             <tr>
-                <th colspan="2" style="background-color: #333; color: white; border: 2px solid #000;">Piezas</th>
+                <th style="background-color: #333; color: white; border: 2px solid #000;">Imagen</th>
+                <th style="background-color: #333; color: white; border: 2px solid #000;">Piezas</th>
                 <th style="background-color: #333; color: white; border: 2px solid #000;">Descripción</th>
                 <th style="background-color: #333; color: white; border: 2px solid #000;">Precio</th>
             </tr>
