--- a/coches.html
+++ b/coches.html
@@ -22,6 +22,7 @@
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
+        <a href="compra.html">compra</a>
     </div>
 </div>
 
