--- a/contacto.html
+++ b/contacto.html
@@ -21,6 +21,7 @@
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
+        <a href="compra.html">compra</a>
     </div>
 </div>
 
@@ -69,11 +70,11 @@
     </form>
 </div>
 
-    <p class="validation">
+<p class="validation">
     <a href="https://validator.w3.org/markup/check?uri=referer">
         <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
     </a>
 </p>
-    
+
 </body>
 </html>
