--- a/piezas.html
+++ b/piezas.html
@@ -23,6 +23,7 @@
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
+        <a href="compra.html">compra</a>
     </div>
 </div>
 
