--- a/contacto.html
+++ b/contacto.html
@@ -6,75 +6,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Coches y Piezas Tuning - Contacto</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styles.css" /> <!-- Enlazamos el archivo CSS -->
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-
-<div class="header">
-    <h1>Tienda de Coches y Piezas Tuning</h1>
-</div>
-
-<!-- Menú de navegación -->
-<div class="nav">
-    <div class="container">
-        <a href="index.html">Inicio</a>
-        <a href="coches.html">Coches</a>
-        <a href="piezas.html">Piezas de Tuning</a>
-        <a href="contacto.html">Contacto</a>
-        <a href="compra.html">compra</a>
+    <div class="header">
+        <h1>Tienda de Coches y Piezas Tuning</h1>
     </div>
-</div>
 
-<div class="container">
-    <h2>Contacto</h2>
-    <p>Si tienes alguna pregunta o consulta, por favor completa el siguiente formulario.</p>
+    <div class="nav">
+        <div class="container">
+            <a href="index.html">Inicio</a>
+            <a href="coches.html">Coches</a>
+            <a href="piezas.html">Piezas de Tuning</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="compra.html">Compra</a>
+        </div>
+    </div>
 
-    <h3>Formulario de contacto</h3>
-    <form action="/submit_contact" method="post" enctype="multipart/form-data">
-        <label for="name">Nombre:</label><br />
-        <input type="text" id="name" name="name" placeholder="Tu nombre completo" required="required" /><br /><br />
+    <div class="container">
+        <h2>Contacto</h2>
+        <p>Si tienes alguna pregunta o consulta, por favor completa el siguiente formulario.</p>
 
-        <label for="email">Correo electrónico:</label><br />
-        <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required="required" /><br /><br />
+        <h3>Formulario de contacto</h3>
 
-        <label for="date">Fecha:</label><br />
-        <input type="date" id="date" name="date" required="required" /><br /><br />
+        <form action="/submit_contact" method="post" enctype="multipart/form-data">
+            <fieldset>
+                <legend>Información personal</legend>
+                <div>
+                    <label for="name">Nombre:</label><br />
+                    <input type="text" id="name" name="name" value="" />
+                </div>
 
-        <label for="queryType">Tipo de consulta:</label><br />
-        <select id="queryType" name="queryType" required="required">
-            <option value="">Selecciona un tipo de consulta</option>
-            <option value="info">Información General</option>
-            <option value="soporte">Soporte Técnico</option>
-            <option value="ventas">Ventas</option>
-            <option value="otros">Otros</option>
-        </select><br /><br />
+                <div>
+                    <label for="email">Correo electrónico:</label><br />
+                    <input type="text" id="email" name="email" value="" />
+                </div>
 
-        <label>Método de contacto preferido:</label><br />
-        <input type="radio" id="emailContact" name="contactMethod" value="email" checked />
-        <label for="emailContact">Email</label><br />
-        <input type="radio" id="phoneContact" name="contactMethod" value="phone" />
-        <label for="phoneContact">Teléfono</label><br /><br />
+                <div>
+                    <label for="date">Fecha:</label><br />
+                    <input type="text" id="date" name="date" value="" />
+                </div>
+            </fieldset>
 
-        <label for="message">Mensaje:</label><br />
-        <textarea id="message" name="message" rows="5" placeholder="Escribe tu mensaje aquí" required="required"></textarea><br /><br />
+            <fieldset>
+                <legend>Consulta</legend>
+                <div>
+                    <label for="queryType">Tipo de consulta:</label><br />
+                    <select id="queryType" name="queryType">
+                        <option value="">Selecciona un tipo de consulta</option>
+                        <option value="info">Información General</option>
+                        <option value="soporte">Soporte Técnico</option>
+                        <option value="ventas">Ventas</option>
+                        <option value="otros">Otros</option>
+                    </select>
+                </div>
 
-        <!-- Campo para subir archivos -->
-        <label for="file">Subir archivo (opcional):</label><br />
-        <input type="file" id="file" name="file" accept="image/*,.pdf,.doc,.docx" /><br /><br />
+                <div>
+                    <label>Método de contacto preferido:</label><br />
+                    <input type="radio" id="emailContact" name="contactMethod" value="email" checked="checked" />
+                    <label for="emailContact">Email</label><br />
+                    <input type="radio" id="phoneContact" name="contactMethod" value="phone" />
+                    <label for="phoneContact">Teléfono</label>
+                </div>
 
-        <!-- Botón de enviar con tick -->
-        <button type="submit" class="tick-button">
-            Enviar
-            <img src="images/tick.png" alt="Tick" />
-        </button>
-    </form>
-</div>
+                <div>
+                    <label for="message">Mensaje:</label><br />
+                    <textarea id="message" name="message" rows="5" cols="30"></textarea>
+                </div>
+            </fieldset>
 
-<p class="validation">
-    <a href="https://validator.w3.org/markup/check?uri=referer">
-        <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
-    </a>
-</p>
+            <fieldset>
+                <legend>Archivos</legend>
+                <div>
+                    <label for="file">Subir archivo (opcional):</label><br />
+                    <input type="file" id="file" name="file" accept="image/*,.pdf,.doc,.docx" />
+                </div>
+            </fieldset>
 
+            <div>
+                <button type="submit" class="tick-button">
+                    Enviar
+                    <img src="images/tick.png" alt="Tick" />
+                </button>
+            </div>
+        </form>
+    </div>
+
+    <div class="validation">
+        <a href="https://validator.w3.org/markup/check?uri=referer">
+            <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+        </a>
+    </div>
 </body>
 </html>
