--- a/coches.html
+++ b/coches.html
@@ -7,6 +7,8 @@
     <title>Tienda de Coches y Piezas Tuning - Coches</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Enlace al Feed RSS -->
+    <link rel="alternate" type="application/rss+xml" href="feedRSS.html" title="Suscríbete a nuestro RSS" />
 </head>
 <body>
 
@@ -22,8 +24,15 @@
         <a href="coches.html">Coches</a>
         <a href="piezas.html">Piezas de Tuning</a>
         <a href="contacto.html">Contacto</a>
-        <a href="compra.html">compra</a>
+        <a href="compra.html">Compra</a>
     </div>
+</div>
+
+<!-- Enlace visible para suscribirse al RSS -->
+<div class="rss-subscribe">
+    <a href="feedRSS.html" target="_blank" rel="noopener noreferrer">
+        <strong>Suscríbete a nuestro RSS</strong>
+    </a>
 </div>
 
 <div class="container">
@@ -68,6 +77,7 @@
         </tr>
     </table>
 </div>
+
 <p class="validation">
     <a href="https://validator.w3.org/markup/check?uri=referer">
         <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
