--- a/compra.html
+++ b/compra.html
@@ -71,6 +71,27 @@
             <label for="fecha_pago">Fecha Estimada de Pago:</label>
             <input type="date" id="fecha_pago" name="fecha_pago" required min="<?php echo date('Y-m-d'); ?>">
 
+            <label for="hora_pago">Hora Estimada de Pago:</label>
+            <input type="time" id="hora_pago" name="hora_pago" required>
+
+            <label for="mes_pago">Mes Estimado de Pago:</label>
+            <input type="month" id="mes_pago" name="mes_pago" required>
+
+            <label for="semana_pago">Semana Estimada de Pago:</label>
+            <input type="week" id="semana_pago" name="semana_pago" required>
+
+            <label for="numero_pago">Monto del Pago:</label>
+            <input type="number" id="numero_pago" name="numero_pago" required min="0" step="100" placeholder="Monto en USD">
+
+            <label for="url_pago">URL de la Transacción:</label>
+            <input type="url" id="url_pago" name="url_pago" placeholder="https://ejemplo.com/pago">
+
+            <label for="color_favorito">Color Favorito:</label>
+            <input type="color" id="color_favorito" name="color_favorito" value="#ff0000">
+
+            <label for="valor_escala">Escala de Preferencia:</label>
+            <input type="range" id="valor_escala" name="valor_escala" min="0" max="10" step="1" value="5">
+
             <h2>Aceptación de Términos</h2>
             <input type="checkbox" id="terminos" name="terminos" required>
             <label for="terminos">Acepto los términos y condiciones de compra</label>
