--- a/contacto.html
+++ b/contacto.html
@@ -35,17 +35,27 @@
                 <legend>Información personal</legend>
                 <div>
                     <label for="name">Nombre:</label><br />
-                    <input type="text" id="name" name="name" value="" />
+                    <input type="text" id="name" name="name" />
                 </div>
 
                 <div>
                     <label for="email">Correo electrónico:</label><br />
-                    <input type="text" id="email" name="email" value="" />
+                    <input type="text" id="email" name="email" />
+                </div>
+
+                <div>
+                    <label for="password">Contraseña:</label><br />
+                    <input type="password" id="password" name="password" />
+                </div>
+
+                <div>
+                    <label for="phone">Teléfono:</label><br />
+                    <input type="text" id="phone" name="phone" />
                 </div>
 
                 <div>
                     <label for="date">Fecha:</label><br />
-                    <input type="text" id="date" name="date" value="" />
+                    <input type="text" id="date" name="date" />
                 </div>
             </fieldset>
 
@@ -58,8 +68,14 @@
                         <option value="info">Información General</option>
                         <option value="soporte">Soporte Técnico</option>
                         <option value="ventas">Ventas</option>
+                        <option value="devoluciones">Devoluciones</option>
                         <option value="otros">Otros</option>
                     </select>
+                </div>
+
+                <div>
+                    <label for="website">Página Web:</label><br />
+                    <input type="text" id="website" name="website" />
                 </div>
 
                 <div>
