--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="alternate" type="application/rss+xml" href="feedRSS.html" title="Suscríbete a nuestro RSS" />
 </head>
 <body>
 
@@ -29,6 +30,12 @@
 <div class="container">
     <h2>Bienvenido a nuestra tienda</h2>
     <p>Esta es nuestra Tienda de Coches y Piezas Tuning, donde encontrarás los mejores vehículos y accesorios para personalizar tu coche. Desde deportivos icónicos hasta piezas de alto rendimiento, todo lo que necesitas para llevar tu conducción al siguiente nivel está aquí. ¡Explora nuestras ofertas y dale potencia a tu pasión por el tuning!</p>
+</div>
+
+<div class="rss-subscribe">
+    <a href="feedRSS.html" target="_blank" rel="noopener noreferrer">
+        <strong>Suscríbete a nuestro RSS</strong>
+    </a>
 </div>
 
 <!-- Imagen de portada debajo del texto -->
