--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="alternate" type="application/rss+xml" href="feedRSS.html" title="Suscríbete a nuestro RSS" />
+    <link rel="alternate" type="application/rss+xml" href="feedRSS.rss" title="Suscríbete a nuestro RSS" />
 </head>
 <body>
 
