--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="rss-subscribe">
-    <a href="feedRSS.html" target="_blank" rel="noopener noreferrer">
+    <a href="feedRSS.rss" target="_blank" rel="noopener noreferrer">
         <strong>Suscríbete a nuestro RSS</strong>
     </a>
 </div>
