--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tienda de Coches y Piezas Tuning - Inicio</title>
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="alternate" type="application/rss+xml" href="feedRSS.rss" title="Suscríbete a nuestro RSS" />
+    <link rel="alternate" type="application/rss+xml" href="feedRSS.xml" title="Suscríbete a nuestro RSS" />
 </head>
 <body>
 
@@ -33,7 +33,7 @@
 </div>
 
 <div class="rss-subscribe">
-    <a href="feedRSS.rss" target="_blank" rel="noopener noreferrer">
+    <a href="feedRSS.xml" target="_blank" rel="noopener noreferrer">
         <strong>Suscríbete a nuestro RSS</strong>
     </a>
 </div>
