--- a/compra.html
+++ b/compra.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Compra - Concesionario Online</title>
+    <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css">
 
     <script>
