--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/llave.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="alternate" type="application/rss+xml" href="feedRSS.xml" title="Suscríbete a nuestro RSS" />
+    <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Suscríbete a nuestro Atom Feed" />
 </head>
 <body>
 
