--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <strong>Suscríbete a nuestro RSS</strong>
     </a>
 </div>
-
+<div class="atom-suscribe">
+    <a href="atom.xml" target="_blank" rel="noopener noreferrer">
+        <strong>Suscríbete a nuestro atom</strong>
+    </a>
+</div>
 <!-- Imagen de portada debajo del texto -->
 <div class="portada">
     <img src="images/taller.jpg" alt="Imagen de portada de un taller" class="portada-img" />
